fix hang when Fullscreen